--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -2,10 +2,10 @@
   "ci": {
     "assert": {
       "assertions": {
-        "categories:performance": ["error", { "minScore": 0.9 }],
+        "categories:performance": ["warn", { "minScore": 0.9 }],
         "categories:accessibility": ["warn", { "minStore": 0.9 }],
         "categories:best-practices": ["warn", { "minScore": 0.9 }],
-        "categoried:seo": ["error", { "minScore": 0.9 }]
+        "categoried:seo": ["error", { "minScore": 0.8 }]
       }
     },
     "upload": {
