--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -2,14 +2,11 @@
   "ci": {
     "assert": {
       "assertions": {
-        "categories:performance": ["warn", { "minScore": 0.1 }],
-        "categories:accessibility": ["warn", { "minStore": 0.1 }],
-        "categories:best-practices": ["warn", { "minScore": 0.1 }],
-        "categoried:seo": ["error", { "minScore": 0.1 }]
+        "categories:performance": ["error", { "minScore": 0.5 }],
+        "categories:accessibility": ["warn", { "minStore": 0.5 }],
+        "categories:best-practices": ["warn", { "minScore": 0.5 }],
+        "categoried:seo": ["error", { "minScore": 0.5 }]
       }
-    },
-    "upload": {
-      "target": "temporary-public-storage"
     }
   }
 }
