--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,11 +1,16 @@
 {
   "ci": {
     "assert": {
+      "preset": "lighthouse:no-pwa",
       "assertions": {
-        "categories:performance": ["error", { "minScore": 0.5 }],
-        "categories:accessibility": ["warn", { "minStore": 0.5 }],
-        "categories:best-practices": ["warn", { "minScore": 0.5 }],
-        "categoried:seo": ["error", { "minScore": 0.5 }]
+        "categories:performance": [
+          "warn",
+          { "aggregationMethod": "optimistic", "minScore": 0.7 }
+        ],
+        "categories:accessibility": [
+          "warn",
+          { "aggregationMethod": "optimistic", "minScore": 0.9 }
+        ]
       }
     }
   }
